--- a/popup.html
+++ b/popup.html
@@ -134,7 +134,7 @@
             <!-- Locations will be populated by JS -->
           </div>
           <div class="add-location-row">
-            <input type="text" id="newLocationInput" class="text-input" placeholder="ENTER_LOCATION_NAME...">
+            <input type="text" id="newLocationInput" class="text-input" placeholder="LOC1, LOC2, LOC3... (COMMA_SEPARATED)">
             <button id="addLocationBtn" class="btn-add">ADD</button>
           </div>
         </div>
