--- a/popup.html
+++ b/popup.html
@@ -140,6 +140,7 @@
         </div>
       </div>
       <div class="modal-footer">
+        <button id="clearAllLocationsBtn" class="btn-reset">CLEAR_ALL</button>
         <button id="resetLocationsBtn" class="btn-reset">RESET_TO_DEFAULTS</button>
       </div>
     </div>
